home/kkleine/dev/lkml/0/25883.5be1b9968c04c61949858821d16205b83de4a387
WARNING:COMMIT_LOG_LONG_LINE: Possible unwrapped commit description (prefer a maximum 75 chars per line)
#32: 
> arch/ia64/sn/kernel/setup.c:470: error: `ia64_timestamp_clock' undeclared (first use in this function)

WARNING:TYPO_SPELLING: 'occurence' may be misspelled - perhaps 'occurrence'?
#52: 
Rename forgotten occurence of ia64_printk_clock to ia64_timestamp_clock
                 ^^^^^^^^^

Some words may have been misspelled.  Consider reviewing them.

/tmp/tmp.gGZ8aIRHtl//home/kkleine/dev/lkml/0/patch.offset.25883.commit.5be1b9968c04c61949858821d16205b83de4a387 total: 0 errors, 2 warnings, 0 checks, 8 lines checked

NOTE: For some of the reported defects, checkpatch may be able to
      mechanically convert to the typical style using --fix or --fix-inplace.

/tmp/tmp.gGZ8aIRHtl//home/kkleine/dev/lkml/0/patch.offset.25883.commit.5be1b9968c04c61949858821d16205b83de4a387 has style problems, please review.

NOTE: If any of the errors are false positives, please report
      them to the maintainer, see CHECKPATCH in MAINTAINERS.
